# src/routers/book.router.js
@@ -1,5 +1,5 @@
 const { Router } = require("express");
-const { addTitle, getTitles, editTitle, addBook, getTitleById, getTitleBySlug, editBook } = require("../controllers/book.controller");
+const { addTitle, getTitles, editTitle, addBook, getTitleById, getTitleBySlug, editBook, deleteBook } = require("../controllers/book.controller");
 const bookRouter = Router();
 
 bookRouter.post('/titles', addTitle);
@@ -9,5 +9,6 @@ bookRouter.get('/titles/by-id/:id', getTitleById);
 bookRouter.patch('/titles/:id', editTitle);
 bookRouter.post('/', addBook);
 bookRouter.patch('/:id', editBook);
+bookRouter.delete('/:id', deleteBook);
 
 module.exports = bookRouter;
